Added user's name to ratings and reviews for a group